@@ -24,6 +24,7 @@
 
 bool DropCopyAddCommand::Execute()
 {
+	bool bRet = false;
 	CString droppath = parser.GetVal(_T("droptarget"));
 	if (CTSVNPath(droppath).IsAdminDir())
 		return FALSE;
@@ -103,5 +104,6 @@ bool DropCopyAddCommand::Execute()
 	props.ReadPropsPathList(copiedFiles);
 	progDlg.SetProjectProperties(props);
 	progDlg.DoModal();
-	return true;
+	bRet = !progDlg.DidErrorsOccur();
+	return bRet;
 }
