@@ -26,6 +26,7 @@
 
 bool DropExportCommand::Execute()
 {
+	bool bRet = true;
 	CString droppath = parser.GetVal(_T("droptarget"));
 	if (CTSVNPath(droppath).IsAdminDir())
 		return false;
@@ -99,8 +100,9 @@ bool DropExportCommand::Execute()
 			if (!svn.Export(pathList[nPath], CTSVNPath(dropper), SVNRev::REV_WC ,SVNRev::REV_WC, FALSE, FALSE, svn_depth_infinity, hwndExplorer, parser.HasKey(_T("extended"))))
 			{
 				CMessageBox::Show(hwndExplorer, svn.GetLastErrorMessage(), _T("TortoiseSVN"), MB_OK | MB_ICONERROR);
+				bRet = false;
 			}
 		}
 	}
-	return true;
+	return bRet;
 }
