@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2007 - TortoiseSVN
+// Copyright (C) 2007-2008 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -32,8 +32,7 @@ public:
 	 */
 	virtual bool			Execute()
 	{
-		ShellExecute(hwndExplorer, _T("open"), theApp.m_pszHelpFilePath, NULL, NULL, SW_SHOWNORMAL);
-		return true;
+		return ((int)ShellExecute(hwndExplorer, _T("open"), theApp.m_pszHelpFilePath, NULL, NULL, SW_SHOWNORMAL) > 32);
 	}
 };
 
