@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2007 - TortoiseSVN
+// Copyright (C) 2007-2008 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -24,6 +24,7 @@
 
 bool LockCommand::Execute()
 {
+	bool bRet = false;
 	CLockDlg lockDlg;
 	lockDlg.m_pathList = pathList;
 	ProjectProperties props;
@@ -36,6 +37,7 @@ bool LockCommand::Execute()
 		progDlg.SetCommand(CSVNProgressDlg::SVNProgress_Lock);
 		progDlg.SetPathList(pathList);
 		progDlg.DoModal();
+		bRet = !progDlg.DidErrorsOccur();
 	}
 	else if (lockDlg.DoModal()==IDOK)
 	{
@@ -47,7 +49,8 @@ bool LockCommand::Execute()
 			progDlg.SetPathList(lockDlg.m_pathList);
 			progDlg.SetCommitMessage(lockDlg.m_sLockMessage);
 			progDlg.DoModal();
+			bRet = !progDlg.DidErrorsOccur();
 		}
 	}
-	return true;
+	return bRet;
 }
