@@ -39,13 +39,10 @@ bool PasteMoveCommand::Execute()
 	pathList.RemoveAdminPaths();
 	CString sNewName;
 	CProgressDlg progress;
-	if (progress.IsValid())
-	{
-		progress.SetTitle(IDS_PROC_MOVING);
-		progress.SetAnimation(IDR_MOVEANI);
-		progress.SetTime(true);
-		progress.ShowModeless(CWnd::FromHandle(hwndExplorer));
-	}
+	progress.SetTitle(IDS_PROC_MOVING);
+	progress.SetAnimation(IDR_MOVEANI);
+	progress.SetTime(true);
+	progress.ShowModeless(CWnd::FromHandle(hwndExplorer));
 	for(int nPath = 0; nPath < pathList.GetCount(); nPath++)
 	{
 		CTSVNPath destPath;
