@@ -26,6 +26,7 @@
 
 bool RemoveCommand::Execute()
 {
+	bool bRet = false;
 	// removing items from a working copy is done item-by-item so we
 	// have a chance to show a progress bar
 	//
@@ -54,6 +55,7 @@ bool RemoveCommand::Execute()
 				CMessageBox::Show(hwndExplorer, svn.GetLastErrorMessage(), _T("TortoiseSVN"), MB_ICONERROR);
 				return FALSE;
 			}
+			return true;
 		}
 		return FALSE;
 	}
@@ -100,6 +102,8 @@ bool RemoveCommand::Execute()
 						{
 							CMessageBox::Show(hwndExplorer, svn.GetLastErrorMessage(), _T("TortoiseSVN"), MB_ICONERROR);
 						}
+						else
+							bRet = true;
 					}
 				}
 				else
@@ -107,5 +111,5 @@ bool RemoveCommand::Execute()
 			}
 		}
 	}
-	return true;
+	return bRet;
 }
