@@ -39,6 +39,7 @@ bool SwitchCommand::Execute()
 		progDlg.SetUrl(dlg.m_URL);
 		progDlg.SetRevision(dlg.Revision);
 		progDlg.DoModal();
+		return !progDlg.DidErrorsOccur();
 	}
-	return true;
+	return false;
 }
