@@ -24,11 +24,12 @@
 
 bool UrlDiffCommand::Execute()
 {
+	bool bRet = false;
 	CUrlDiffDlg dlg;
 	if (dlg.DoModal() == IDOK)
 	{
 		SVNDiff diff(NULL, hWndExplorer);
-		diff.ShowCompare(cmdLinePath, SVNRev::REV_WC, CTSVNPath(dlg.m_URL), dlg.Revision);
+		bRet = diff.ShowCompare(cmdLinePath, SVNRev::REV_WC, CTSVNPath(dlg.m_URL), dlg.Revision);
 	}
-	return true;
+	return false;
 }
