@@ -13,6 +13,9 @@
        multiple selected revisions. (Stefan)
 - NEW: Paste command to paste copied/cut files from explorer into
        a working copy. See issue #427 for details. (Stefan)
+- NEW: TortoiseProc returns now 0 after the command finished successfully
+       and -1 if the command failed with an error. See issue #426
+       for details. (Stefan)
 - CHG: The bug-ID column width in the log dialog is now limited 
        to 200 pixels. (Stefan)
 - CHG: The right-drag context menu now only shows "Export" if a versioned
